# svl-trainer

./: .gitignore  LICENSE  README.md  deploy.sh  svl-trainer.code-workspace  svl-trainer.service
client/: .env.development  .env.production  dev.sh  index.html  package-lock.json  package.json  vite.config.ts
client/src/: API.ts  App.css  App.tsx  Hub.css  Hub.tsx  Quiz.css  Quiz.tsx  mondai.tsx  speech.ts  types.ts
server/: dev.sh  main.py  pyproject.toml  run.sh
server/src/svl_trainer_server/: db.py  main.py  models.py  schemas.py  svl.py
