[project]
name = "svl-trainer-server"
version = "0.1.0"
description = "SVL Trainer Server Component"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    # 必要な依存関係をここに記述
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    # 他の依存関係...
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
svl-trainer-server = "server.main:main"  # エントリーポイントがあれば
